[gd_scene load_steps=6 format=2]

[ext_resource path="res://Miriya/Healthbar/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Miriya/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=2]
resource_name = "Invulnerable"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.02, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 34.1074, -206.263 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -150 )
current = true
zoom = Vector2( 1.15, 1.15 )
limit_left = -35
limit_smoothed = true
smoothing_enabled = true

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
margin_left = 1.15814
margin_top = -47.4238
margin_right = 4.15814
margin_bottom = -7.42383
rect_scale = Vector2( 0.05, 0.08 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="Invulnerable_Animation" type="AnimationPlayer" parent="."]
anims/Invulnerable = SubResource( 2 )
[connection signal="update_health" from="." to="." method="_on_Player_update_health"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
